# vireo

./: .gitignore  LICENSE  README.md
imagecore/: .gitignore  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  imagecore.cpp  imagecore.h
imagecore/formats/: format.h  reader.cpp  reader.h  writer.cpp  writer.h
imagecore/formats/exif/: exifcommon.cpp  exifcommon.h  exifreader.cpp  exifreader.h  exifwriter.cpp  exifwriter.h
imagecore/formats/internal/: bmp.cpp  bmp.h  gif.cpp  gif.h  jpeg.cpp  jpeg.h  png.cpp  png.h  raw.cpp  raw.h  register.cpp  register.h  tiff.cpp  tiff.h  webp.cpp  webp.h
imagecore/image/: colorpalette.cpp  colorpalette.h  colorspace.cpp  colorspace.h  grayscale.cpp  grayscale.h  image.cpp  image.h  interleaved.h  kernel.cpp  kernel.h  resizecrop.cpp  resizecrop.h  rgba.cpp  rgba.h  tiledresize.cpp  tiledresize.h  yuv.cpp  yuv.h  yuv_semiplanar.cpp  yuv_semiplanar.h
imagecore/image/internal/: conversions.cpp  conversions.h  filters.cpp  filters.h  filters_intrinsics.cpp  intrinsics.h  intrinsics_neon.h  intrinsics_sse.h  neon.cpp  platform_support.cpp  platform_support.h  sse.cpp
imagecore/utils/: endianutils.h  mathtypes.h  mathutils.h  memorystream.h  securemath.h
imagetool/: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  ltmain.sh  main.cpp  valgrind.supp  version.h
imagetool/commands/: clean.cpp  clean.h  colors.cpp  colors.h  command.cpp  command.h  forcergb.cpp  forcergb.h  frames.cpp  frames.h  genlut.cpp  genlut.h  identify.cpp  identify.h  pad.cpp  pad.h  resize.cpp  resize.h
vireo/: Makefile.am  Makefile.in  aclocal.m4  base_cpp.h  base_h.h  build_scala.sh  config.h.in  configure  configure.ac  constants.h  dependency.hpp  types.h  version.h  vireo.pc.in
vireo/android/: Android.mk  android.cpp  android.h  util.cpp  util.h
vireo/common/: bitreader.cpp  bitreader.h  data.cpp  data.h  editbox.cpp  editbox.h  enum.hpp  math.h  path.cpp  path.h  reader.cpp  reader.h  ref.h  security.h  util.h
vireo/decode/: audio.cpp  audio.h  types.h  video.cpp  video.h
vireo/demux/: movie.cpp  movie.h
vireo/domain/: interval-transform.hpp  interval.hpp  util.h
vireo/encode/: aac.cpp  aac.h  h264.cpp  h264.h  jpg.cpp  jpg.h  png.cpp  png.h  types.h  util.h  vorbis.cpp  vorbis.h  vp8.cpp  vp8.h
vireo/error/: error.cpp  error.h
vireo/frame/: frame.cpp  frame.h  plane.cpp  plane.h  rgb-swscale.cpp  rgb.cpp  rgb.h  util.cpp  util.h  yuv-swscale.cpp  yuv.cpp  yuv.h
vireo/functional/: function.hpp  media.hpp
vireo/header/: header.cpp  header.h
vireo/helloworld/: helloworld.cpp
vireo/internal/decode/: aac.cpp  aac.h  annexb.cpp  annexb.h  avcc.cpp  avcc.h  h264.cpp  h264.h  h264_bytestream.cpp  h264_bytestream.h  image.cpp  image.h  pcm.cpp  pcm.h  types.h  util.h
vireo/internal/demux/: image.cpp  image.h  mp2ts.cpp  mp2ts.h  mp4.cpp  mp4.h  webm.cpp  webm.h
vireo/java/: MP4Test.java
vireo/mux/: mp2ts.cpp  mp2ts.h  mp4.cpp  mp4.h  webm.cpp  webm.h
vireo/periscope/: util.cpp  util.h
vireo/scala/jni/common/: jni.cpp  jni.h
vireo/scala/jni/vireo/: decode.cpp  decode.h  demux.cpp  demux.h  encode.cpp  encode.h  frame.cpp  frame.h  mux.cpp  mux.h  periscope.cpp  periscope.h  sound.cpp  sound.h  transform.cpp  transform.h  util.cpp  util.h
vireo/scala/vireo-scala/: pom.xml.template
vireo/scala/vireo-scala/src/main/scala/com/twitter/vireo/: Exceptions.scala  Types.scala
vireo/scala/vireo-scala/src/main/scala/com/twitter/vireo/common/: Data.scala  EditBox.scala  Math.scala  Reader.scala  Util.scala
vireo/scala/vireo-scala/src/main/scala/com/twitter/vireo/decode/: Audio.scala  Types.scala  Video.scala
vireo/scala/vireo-scala/src/test/scala/com/twitter/vireo/: DecodeTest.scala  DemuxTest.scala  EncodeTest.scala  ExceptionsTest.scala  FrameTest.scala  PeriscopeTest.scala  RemuxTest.scala  TestCommon.scala  TransformTest.scala
vireo/settings/: settings-vorbis.cpp  settings.cpp  settings.h
vireo/sound/: pcm.cpp  pcm.h  sound.cpp  sound.h
vireo/tests/: test_common.cpp  test_common.h
vireo/tools/batch/: .run  .setup  chunk.sh  frames.sh  nest-run  transcode.sh  validate.sh
vireo/tools/chunk/: main.cpp
vireo/tools/chunk/chunk.xcodeproj/: project.pbxproj
vireo/tools/chunk/scripts/: deploy.aurora  deploy.sh
vireo/tools/frames/: main.cpp
vireo/tools/frames/frames.xcodeproj/: project.pbxproj
vireo/tools/psnr/: main.cpp
vireo/tools/psnr/psnr.xcodeproj/: project.pbxproj
vireo/tools/remux/: Makefile  main.cpp
vireo/tools/remux/remux.xcodeproj/: project.pbxproj
vireo/tools/scala/chunk/: pom.xml.template
vireo/tools/scala/transcode/: pom.xml.template
vireo/tools/spectacle/: main.cpp
vireo/tools/spectacle/spectacle.xcodeproj/: project.pbxproj
vireo/tools/stitch/: main.cpp  version.h
vireo/tools/stitch/stitch.xcodeproj/: project.pbxproj
vireo/tools/thumbnails/: main.cpp
vireo/tools/thumbnails/thumbnails.xcodeproj/: project.pbxproj
vireo/tools/transcode/: main.cpp
vireo/tools/transcode/transcode.xcodeproj/: project.pbxproj
vireo/tools/trim/: Makefile  main.cpp
vireo/tools/trim/trim.xcodeproj/: project.pbxproj
vireo/tools/unchunk/: Makefile  main.cpp
vireo/tools/unchunk/unchunk.xcodeproj/: project.pbxproj
vireo/tools/validate/: Makefile  README.md  main.cpp  version.h
vireo/tools/validate/scripts/: deploy.aurora  deploy.sh
vireo/tools/validate/validate.xcodeproj/: project.pbxproj
vireo/tools/validate/validate.xcodeproj/project.xcworkspace/xcuserdata/lalonso.xcuserdatad/: UserInterfaceState.xcuserstate
vireo/tools/validate/validate.xcodeproj/xcuserdata/lalonso.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
vireo/tools/validate/validate.xcodeproj/xcuserdata/lalonso.xcuserdatad/xcschemes/: validate.xcscheme  xcschememanagement.plist
vireo/tools/viddiff/: Makefile  main.cpp
vireo/tools/viddiff/viddiff.xcodeproj/: project.pbxproj
vireo/transform/: stitch.cpp  stitch.h  trim.cpp  trim.h
vireo/util/: caption.cpp  caption.h  ftyp.cpp  ftyp.h  timer.cpp  timer.h  util.h
vireo/valgrind/: valgrind.supp
(+34 files in other folders)
